--- a/cortex/firmware/ngv-core/ngv-core.ioc
+++ b/cortex/firmware/ngv-core/ngv-core.ioc
@@ -5,22 +5,38 @@ CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.FlashInterface=TCM_Enabled
 CORTEX_M7.IPParameters=ART_ACCLERATOR_ENABLE,CPU_ICache,CPU_DCache,FlashInterface,PREFETCH_ENABLE
 CORTEX_M7.PREFETCH_ENABLE=1
+DMA2D.ColorMode=DMA2D_OUTPUT_RGB565
+DMA2D.IPParameters=ColorMode,Mode,RedBlueSwapForeground
+DMA2D.Mode=DMA2D_M2M
+DMA2D.RedBlueSwapForeground=DMA2D_RB_SWAP
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
+FATFS.BSP.number=1
+FATFS0.BSP.STBoard=false
+FATFS0.BSP.i2caddr=0
+FATFS0.BSP.i2creg=0
+FATFS0.BSP.instance=PG2
+FATFS0.BSP.ip=GPIO
+FATFS0.BSP.mode=Input
+FATFS0.BSP.name=Detect_SDIO
 File.Version=6
 KeepUserPlacement=true
 LWIP.Version=v1.5.0_RC0_20160211_Cube
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=ETH
-Mcu.IP2=FATFS
-Mcu.IP3=LWIP
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SPI6
-Mcu.IP7=SYS
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP1=DMA2D
+Mcu.IP10=USART2
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_FS
+Mcu.IP2=ETH
+Mcu.IP3=FATFS
+Mcu.IP4=LWIP
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SDMMC1
+Mcu.IP8=SPI6
+Mcu.IP9=SYS
+Mcu.IPNb=13
 Mcu.Name=STM32F767Z(G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -48,33 +64,42 @@ Mcu.Pin28=PD9
 Mcu.Pin29=PD14
 Mcu.Pin3=PF3
 Mcu.Pin30=PD15
-Mcu.Pin31=PG6
-Mcu.Pin32=PG7
-Mcu.Pin33=PA8
-Mcu.Pin34=PA9
-Mcu.Pin35=PA10
-Mcu.Pin36=PA11
-Mcu.Pin37=PA12
-Mcu.Pin38=PA13
-Mcu.Pin39=PA14
+Mcu.Pin31=PG2
+Mcu.Pin32=PG6
+Mcu.Pin33=PG7
+Mcu.Pin34=PC8
+Mcu.Pin35=PC9
+Mcu.Pin36=PA8
+Mcu.Pin37=PA9
+Mcu.Pin38=PA10
+Mcu.Pin39=PA11
 Mcu.Pin4=PF5
-Mcu.Pin40=PD5
-Mcu.Pin41=PD6
-Mcu.Pin42=PG11
-Mcu.Pin43=PG13
-Mcu.Pin44=PB3
-Mcu.Pin45=PB4
-Mcu.Pin46=PB5
-Mcu.Pin47=PB7
-Mcu.Pin48=VP_FATFS_VS_Generic
-Mcu.Pin49=VP_LWIP_VS_Enabled
+Mcu.Pin40=PA12
+Mcu.Pin41=PA13
+Mcu.Pin42=PA14
+Mcu.Pin43=PC10
+Mcu.Pin44=PC11
+Mcu.Pin45=PC12
+Mcu.Pin46=PD2
+Mcu.Pin47=PD5
+Mcu.Pin48=PD6
+Mcu.Pin49=PG11
 Mcu.Pin5=PH0/OSC_IN
-Mcu.Pin50=VP_SYS_VS_Systick
+Mcu.Pin50=PG13
+Mcu.Pin51=PB3
+Mcu.Pin52=PB4
+Mcu.Pin53=PB5
+Mcu.Pin54=PB7
+Mcu.Pin55=VP_DMA2D_VS_DMA2D
+Mcu.Pin56=VP_FATFS_VS_SDIO
+Mcu.Pin57=VP_LWIP_VS_Enabled
+Mcu.Pin58=VP_SYS_VS_Systick
+Mcu.Pin59=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
 Mcu.Pin6=PH1/OSC_OUT
 Mcu.Pin7=PC0
 Mcu.Pin8=PC1
 Mcu.Pin9=PC3
-Mcu.PinsNb=51
+Mcu.PinsNb=60
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
 MxCube.Version=4.18.0
@@ -84,6 +109,7 @@ NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false
@@ -101,18 +127,22 @@ PA10.Signal=USB_OTG_FS_ID
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USB_DM
 PA11.Locked=true
+PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=USB_DP
 PA12.Locked=true
+PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
+PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=TCK
 PA14.Locked=true
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
@@ -136,8 +166,10 @@ PA7.Signal=ETH_CRS_DV
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=USB_SOF [TP1]
 PA8.Locked=true
+PA8.Mode=Activate_SOF_FS
 PA8.Signal=USB_OTG_FS_SOF
 PA9.Locked=true
+PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD1 [Green]
@@ -176,6 +208,12 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
+PC10.Mode=SD_4_bits_Wide_bus
+PC10.Signal=SDMMC1_D2
+PC11.Mode=SD_4_bits_Wide_bus
+PC11.Signal=SDMMC1_D3
+PC12.Mode=SD_4_bits_Wide_bus
+PC12.Signal=SDMMC1_CK
 PC13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13.GPIO_Label=User Blue Button [B1]
 PC13.GPIO_PuPd=GPIO_PULLDOWN
@@ -201,6 +239,10 @@ PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PC8.Mode=SD_4_bits_Wide_bus
+PC8.Signal=SDMMC1_D0
+PC9.Mode=SD_4_bits_Wide_bus
+PC9.Signal=SDMMC1_D1
 PCC.Checker=false
 PCC.Line=STM32F7x7
 PCC.MCU=STM32F767Z(G-I)Tx
@@ -224,6 +266,8 @@ PD15.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD15.Locked=true
 PD15.PinState=GPIO_PIN_RESET
 PD15.Signal=GPIO_Output
+PD2.Mode=SD_4_bits_Wide_bus
+PD2.Signal=SDMMC1_CMD
 PD5.Mode=Asynchronous
 PD5.Signal=USART2_TX
 PD6.Mode=Asynchronous
@@ -314,6 +358,11 @@ PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
 PG13.Mode=RMII
 PG13.Signal=ETH_TXD0
+PG2.GPIOParameters=GPIO_PuPd,GPIO_Label
+PG2.GPIO_Label=SD_STATE
+PG2.GPIO_PuPd=GPIO_PULLUP
+PG2.Locked=true
+PG2.Signal=GPIO_Input
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -354,7 +403,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=E\:\\Works\\NyaGameVita\\cortex\\firmware\\ngv-core
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_SPI6_Init-SPI6-false-HAL,4-MX_USART2_UART_Init-USART2-false-HAL,5-MX_FATFS_Init-FATFS-false-HAL,6-MX_LWIP_Init-LWIP-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_SPI6_Init-SPI6-false-HAL,4-MX_USART2_UART_Init-USART2-false-HAL,5-MX_FATFS_Init-FATFS-false-HAL,6-MX_DMA2D_Init-DMA2D-false-HAL,7-MX_SDMMC1_SD_Init-SDMMC1-false-HAL,8-MX_LWIP_Init-LWIP-false-HAL,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -362,13 +411,14 @@ RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
 RCC.APB1TimFreq_Value=108000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=108000000
-RCC.APB2TimFreq_Value=216000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV4
+RCC.APB2Freq_Value=54000000
+RCC.APB2TimFreq_Value=108000000
 RCC.CECFreq_Value=32786.88524590164
 RCC.CortexFreq_Value=216000000
 RCC.DFSDMAudioFreq_Value=96000000
-RCC.DFSDMFreq_Value=108000000
+RCC.DFSDMFreq_Value=54000000
+RCC.EnbaleCSS=true
 RCC.EthernetFreq_Value=216000000
 RCC.FCLKCortexFreq_Value=216000000
 RCC.FamilyName=M
@@ -381,7 +431,7 @@ RCC.I2C3Freq_Value=54000000
 RCC.I2C4Freq_Value=54000000
 RCC.I2SClocksFreq_Value=48000000
 RCC.I2SFreq_Value=96000000
-RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtual,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VDD_VALUE,VcooutputI2S,WatchDogFreq_Value
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SClocksFreq_Value,I2SFreq_Value,LCDTFTFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLMCOFreq_Value,PLLMUL,PLLN,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRFreq_Value,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIRCLKFreq_Value,PLLSAIoutputFreq_Value,PRESCALERUSB,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VDD_VALUE,VcooutputI2S,WatchDogFreq_Value
 RCC.LCDTFTFreq_Value=48000000
 RCC.LCDTFToutputFreq_Value=24000000
 RCC.LPTIM1Freq_Value=54000000
@@ -408,7 +458,6 @@ RCC.PLLSAIPCLKFreq_Value=48000000
 RCC.PLLSAIQCLKFreq_Value=96000000
 RCC.PLLSAIRCLKFreq_Value=96000000
 RCC.PLLSAIoutputFreq_Value=48000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
@@ -416,7 +465,8 @@ RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI1Freq_Value=96000000
 RCC.SAI2Freq_Value=96000000
 RCC.SDMMC2Freq_Value=216000000
-RCC.SDMMCFreq_Value=216000000
+RCC.SDMMCClockSelection=RCC_SDMMC1CLKSOURCE_CLK48
+RCC.SDMMCFreq_Value=48000000
 RCC.SPDIFRXFreq_Value=96000000
 RCC.SYSCLKFreq_VALUE=216000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
@@ -433,10 +483,10 @@ RCC.UART4Freq_Value=54000000
 RCC.UART5Freq_Value=54000000
 RCC.UART7Freq_Value=54000000
 RCC.UART8Freq_Value=54000000
-RCC.USART1Freq_Value=108000000
+RCC.USART1Freq_Value=54000000
 RCC.USART2Freq_Value=54000000
 RCC.USART3Freq_Value=54000000
-RCC.USART6Freq_Value=108000000
+RCC.USART6Freq_Value=54000000
 RCC.USBFreq_Value=48000000
 RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
@@ -446,17 +496,42 @@ RCC.VCOSAIOutputFreq_Value=192000000
 RCC.VDD_VALUE=3.3
 RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
-SPI6.CalculateBaudRate=54.0 MBits/s
+SDMMC1.BusWide=SDMMC_BUS_WIDE_1B
+SDMMC1.ClockDiv=9
+SDMMC1.IPParameters=BusWide,WideMode,ClockDiv
+SDMMC1.WideMode=SDMMC_BUS_WIDE_4B
+SPI6.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI6.CalculateBaudRate=27.0 MBits/s
 SPI6.DataSize=SPI_DATASIZE_8BIT
-SPI6.IPParameters=Mode,CalculateBaudRate,DataSize
+SPI6.IPParameters=Mode,CalculateBaudRate,DataSize,NSSPMode,BaudRatePrescaler
 SPI6.Mode=SPI_MODE_MASTER
+SPI6.NSSPMode=SPI_NSS_PULSE_DISABLE
 USART2.BaudRate=9600
 USART2.IPParameters=BaudRate,WordLength
 USART2.WordLength=UART_WORDLENGTH_8B
-VP_FATFS_VS_Generic.Mode=User_defined
-VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
+USB_DEVICE.CLASS_NAME-MSC_FS=MSC
+USB_DEVICE.CONFIGURATION_STRING_MSC_FS=NGV Config
+USB_DEVICE.INTERFACE_STRING_MSC_FS=NGV Interface
+USB_DEVICE.IPParameters=VirtualMode-MSC_FS,VirtualModeFS,USBD_HandleTypeDef-MSC_FS,CLASS_NAME-MSC_FS,MANUFACTURER_STRING-MSC_FS,VID-MSC_FS,PID_MSC_FS,PRODUCT_STRING_MSC_FS,SERIALNUMBER_STRING_MSC_FS,CONFIGURATION_STRING_MSC_FS,INTERFACE_STRING_MSC_FS
+USB_DEVICE.MANUFACTURER_STRING-MSC_FS=NSDN
+USB_DEVICE.PID_MSC_FS=975
+USB_DEVICE.PRODUCT_STRING_MSC_FS=NyaGame Vita
+USB_DEVICE.SERIALNUMBER_STRING_MSC_FS=000000000001
+USB_DEVICE.USBD_HandleTypeDef-MSC_FS=hUsbDeviceFS
+USB_DEVICE.VID-MSC_FS=9629
+USB_DEVICE.VirtualMode-MSC_FS=Msc
+USB_DEVICE.VirtualModeFS=Msc_FS
+USB_OTG_FS.IPParameters=VirtualMode,lpm_enable
+USB_OTG_FS.VirtualMode=Device_Only
+USB_OTG_FS.lpm_enable=ENABLE
+VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
+VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
+VP_FATFS_VS_SDIO.Mode=SDIO
+VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Mode=MSC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_MSC_FS
 board=ngv-core
