--- a/cortex/firmware/ngv-sys/ngv-sys.ioc
+++ b/cortex/firmware/ngv-sys/ngv-sys.ioc
@@ -309,7 +309,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
+ProjectManager.CustomerFirmwarePackage=C\:/Users/drzzm/STM32Cube/Repository/STM32Cube_FW_F4_V1.14.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407IGTx
