--- a/cortex/firmware/ngv-core/ngv-core.ioc
+++ b/cortex/firmware/ngv-core/ngv-core.ioc
@@ -384,7 +384,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=C\:/Users/drzzm/STM32Cube/Repository/STM32Cube_FW_F7_V1.5.1
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F767ZITx
@@ -497,7 +497,7 @@ RCC.VDD_VALUE=3.3
 RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SDMMC1.BusWide=SDMMC_BUS_WIDE_1B
-SDMMC1.ClockDiv=9
+SDMMC1.ClockDiv=0
 SDMMC1.IPParameters=BusWide,WideMode,ClockDiv
 SDMMC1.WideMode=SDMMC_BUS_WIDE_4B
 SPI6.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
