Signed-off-by: drzzm32 <drzzm32@gmail.com>

--- a/cortex/firmware/ngv-core/ngv-core.ioc
+++ b/cortex/firmware/ngv-core/ngv-core.ioc
@@ -1,4 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 CORTEX_M7.ART_ACCLERATOR_ENABLE=1
 CORTEX_M7.CPU_DCache=Enabled
 CORTEX_M7.CPU_ICache=Enabled
@@ -23,83 +28,85 @@ File.Version=6
 KeepUserPlacement=true
 LWIP.Version=v1.5.0_RC0_20160211_Cube
 Mcu.Family=STM32F7
-Mcu.IP0=CORTEX_M7
-Mcu.IP1=DMA2D
-Mcu.IP10=USART2
-Mcu.IP11=USB_DEVICE
-Mcu.IP12=USB_OTG_FS
-Mcu.IP2=ETH
-Mcu.IP3=FATFS
-Mcu.IP4=LWIP
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SDMMC1
-Mcu.IP8=SPI6
-Mcu.IP9=SYS
-Mcu.IPNb=13
+Mcu.IP0=ADC3
+Mcu.IP1=CORTEX_M7
+Mcu.IP10=SYS
+Mcu.IP11=USART2
+Mcu.IP12=USB_DEVICE
+Mcu.IP13=USB_OTG_FS
+Mcu.IP2=DMA2D
+Mcu.IP3=ETH
+Mcu.IP4=FATFS
+Mcu.IP5=LWIP
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SDMMC1
+Mcu.IP9=SPI6
+Mcu.IPNb=14
 Mcu.Name=STM32F767Z(G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA1
-Mcu.Pin11=PA2
-Mcu.Pin12=PA3
-Mcu.Pin13=PA4
-Mcu.Pin14=PA7
-Mcu.Pin15=PC4
-Mcu.Pin16=PC5
-Mcu.Pin17=PB0
-Mcu.Pin18=PF12
-Mcu.Pin19=PF13
+Mcu.Pin10=PC3
+Mcu.Pin11=PA1
+Mcu.Pin12=PA2
+Mcu.Pin13=PA3
+Mcu.Pin14=PA4
+Mcu.Pin15=PA7
+Mcu.Pin16=PC4
+Mcu.Pin17=PC5
+Mcu.Pin18=PB0
+Mcu.Pin19=PF12
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PF14
-Mcu.Pin21=PF15
-Mcu.Pin22=PE9
-Mcu.Pin23=PE11
-Mcu.Pin24=PE13
-Mcu.Pin25=PB13
-Mcu.Pin26=PB14
-Mcu.Pin27=PD8
-Mcu.Pin28=PD9
-Mcu.Pin29=PD14
+Mcu.Pin20=PF13
+Mcu.Pin21=PF14
+Mcu.Pin22=PF15
+Mcu.Pin23=PE9
+Mcu.Pin24=PE11
+Mcu.Pin25=PE13
+Mcu.Pin26=PB13
+Mcu.Pin27=PB14
+Mcu.Pin28=PD8
+Mcu.Pin29=PD9
 Mcu.Pin3=PF3
-Mcu.Pin30=PD15
-Mcu.Pin31=PG2
-Mcu.Pin32=PG6
-Mcu.Pin33=PG7
-Mcu.Pin34=PC8
-Mcu.Pin35=PC9
-Mcu.Pin36=PA8
-Mcu.Pin37=PA9
-Mcu.Pin38=PA10
-Mcu.Pin39=PA11
-Mcu.Pin4=PF5
-Mcu.Pin40=PA12
-Mcu.Pin41=PA13
-Mcu.Pin42=PA14
-Mcu.Pin43=PC10
-Mcu.Pin44=PC11
-Mcu.Pin45=PC12
-Mcu.Pin46=PD2
-Mcu.Pin47=PD5
-Mcu.Pin48=PD6
-Mcu.Pin49=PG11
-Mcu.Pin5=PH0/OSC_IN
-Mcu.Pin50=PG13
-Mcu.Pin51=PB3
-Mcu.Pin52=PB4
-Mcu.Pin53=PB5
-Mcu.Pin54=PB7
-Mcu.Pin55=VP_DMA2D_VS_DMA2D
-Mcu.Pin56=VP_FATFS_VS_SDIO
-Mcu.Pin57=VP_LWIP_VS_Enabled
-Mcu.Pin58=VP_SYS_VS_Systick
-Mcu.Pin59=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
-Mcu.Pin6=PH1/OSC_OUT
-Mcu.Pin7=PC0
-Mcu.Pin8=PC1
-Mcu.Pin9=PC3
-Mcu.PinsNb=60
+Mcu.Pin30=PD14
+Mcu.Pin31=PD15
+Mcu.Pin32=PG2
+Mcu.Pin33=PG6
+Mcu.Pin34=PG7
+Mcu.Pin35=PC8
+Mcu.Pin36=PC9
+Mcu.Pin37=PA8
+Mcu.Pin38=PA9
+Mcu.Pin39=PA10
+Mcu.Pin4=PF4
+Mcu.Pin40=PA11
+Mcu.Pin41=PA12
+Mcu.Pin42=PA13
+Mcu.Pin43=PA14
+Mcu.Pin44=PC10
+Mcu.Pin45=PC11
+Mcu.Pin46=PC12
+Mcu.Pin47=PD2
+Mcu.Pin48=PD5
+Mcu.Pin49=PD6
+Mcu.Pin5=PF5
+Mcu.Pin50=PG11
+Mcu.Pin51=PG13
+Mcu.Pin52=PB3
+Mcu.Pin53=PB4
+Mcu.Pin54=PB5
+Mcu.Pin55=PB7
+Mcu.Pin56=VP_DMA2D_VS_DMA2D
+Mcu.Pin57=VP_FATFS_VS_SDIO
+Mcu.Pin58=VP_LWIP_VS_Enabled
+Mcu.Pin59=VP_SYS_VS_Systick
+Mcu.Pin6=PH0/OSC_IN
+Mcu.Pin60=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
+Mcu.Pin7=PH1/OSC_OUT
+Mcu.Pin8=PC0
+Mcu.Pin9=PC1
+Mcu.PinsNb=61
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
 MxCube.Version=4.18.0
@@ -342,6 +349,11 @@ PF3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PF3.Locked=true
 PF3.PinState=GPIO_PIN_SET
 PF3.Signal=GPIO_Output
+PF4.GPIOParameters=GPIO_Label
+PF4.GPIO_Label=ADC_IN
+PF4.Locked=true
+PF4.Mode=IN14
+PF4.Signal=ADC3_IN14
 PF5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PF5.GPIO_Label=LCD_RST
 PF5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -403,7 +415,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=E\:\\Works\\NyaGameVita\\cortex\\firmware\\ngv-core
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_SPI6_Init-SPI6-false-HAL,4-MX_USART2_UART_Init-USART2-false-HAL,5-MX_FATFS_Init-FATFS-false-HAL,6-MX_DMA2D_Init-DMA2D-false-HAL,7-MX_SDMMC1_SD_Init-SDMMC1-false-HAL,8-MX_LWIP_Init-LWIP-false-HAL,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_SPI6_Init-SPI6-false-HAL,4-MX_USART2_UART_Init-USART2-false-HAL,5-MX_FATFS_Init-FATFS-false-HAL,6-MX_DMA2D_Init-DMA2D-false-HAL,7-MX_SDMMC1_SD_Init-SDMMC1-false-HAL,8-MX_LWIP_Init-LWIP-false-HAL,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,10-MX_ADC3_Init-ADC3-false-HAL
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
