--- a/cortex/firmware/ngv-core/ngv-core.ioc
+++ b/cortex/firmware/ngv-core/ngv-core.ioc
@@ -482,7 +482,8 @@ SPI6.Direction=SPI_DIRECTION_2LINES
 SPI6.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,CLKPolarity,CLKPhase
 SPI6.Mode=SPI_MODE_MASTER
 SPI6.VirtualType=VM_MASTER
-USART3.IPParameters=VirtualMode-Asynchronous,WordLength
+USART3.BaudRate=9600
+USART3.IPParameters=VirtualMode-Asynchronous,WordLength,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USART3.WordLength=WORDLENGTH_8B
 USB_DEVICE.CLASS_NAME-MSC_FS=MSC
