--- a/cortex/firmware/ngv-core/ngv-core.ioc
+++ b/cortex/firmware/ngv-core/ngv-core.ioc
@@ -81,10 +81,11 @@ Mcu.Pin7=PH1/OSC_OUT
 Mcu.Pin8=PC0
 Mcu.Pin9=PC1
 Mcu.PinsNb=53
+Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
-MxCube.Version=4.23.0
-MxDb.Version=DB.4.0.230
+MxCube.Version=4.25.1
+MxDb.Version=DB.4.0.251
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true
@@ -353,17 +354,18 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=C\:/Users/drzzm/STM32Cube/Repository/STM32Cube_FW_F7_V1.8.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F767ZITx
-ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.8.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.11.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x800
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Src
 ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=ngv-core.ioc
@@ -372,7 +374,7 @@ ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL,5-MX_FATFS_Init-FATFS-false-HAL,6-MX_ADC3_Init-ADC3-false-HAL,7-MX_SPI1_Init-SPI1-false-HAL,8-MX_SPI6_Init-SPI6-false-HAL,9-MX_USART3_UART_Init-USART3-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI6_Init-SPI6-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
