--- a/cortex/firmware/ngv-sys/ngv-sys.ioc
+++ b/cortex/firmware/ngv-sys/ngv-sys.ioc
@@ -1,4 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
+FATFS.IPParameters=USE_DMA_CODE_SD
+FATFS.USE_DMA_CODE_SD=0
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -87,10 +89,11 @@ Mcu.Pin70=VP_USB_DEVICE_VS_USB_DEVICE_MSC_HS
 Mcu.Pin8=PH0-OSC_IN
 Mcu.Pin9=PH1-OSC_OUT
 Mcu.PinsNb=71
+Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407IGTx
-MxCube.Version=4.23.0
-MxDb.Version=DB.4.0.230
+MxCube.Version=4.25.1
+MxDb.Version=DB.4.0.251
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -450,29 +453,30 @@ PI7.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
-ProjectManager.CompilerOptimize=2
+ProjectManager.CompilerOptimize=3
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
+ProjectManager.CustomerFirmwarePackage=C\:/Users/drzzm32/STM32Cube/Repository/STM32Cube_FW_F4_V1.21.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407IGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.18.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.21.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
+ProjectManager.MainLocation=Src
 ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=ngv-sys.ioc
 ProjectManager.ProjectName=ngv-sys
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x800
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_SDIO_SD_Init-SDIO-false-HAL,4-MX_FATFS_Init-FATFS-false-HAL,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL,7-MX_USART6_UART_Init-USART6-false-HAL,8-MX_TIM12_Init-TIM12-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_SDIO_SD_Init-SDIO-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USART6_UART_Init-USART6-false-HAL-true,8-MX_TIM12_Init-TIM12-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
