--- a/cortex/firmware/ngv-main/ngv-main.ioc
+++ b/cortex/firmware/ngv-main/ngv-main.ioc
@@ -199,6 +199,8 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Speed
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
 PA9.Mode=Asynchronous
