screen ok, bug in sd card

--- a/cortex/firmware/ngv-main/ngv-main.ioc
+++ b/cortex/firmware/ngv-main/ngv-main.ioc
@@ -1,4 +1,21 @@
 #MicroXplorer Configuration settings - do not modify
+FATFS.BSP.number=1
+FATFS.IPParameters=USE_DMA_CODE_SD
+FATFS.USE_DMA_CODE_SD=0
+FATFS0.BSP.STBoard=false
+FATFS0.BSP.api=UnknownBspDriver
+FATFS0.BSP.component=
+FATFS0.BSP.i2caddr=0
+FATFS0.BSP.i2creg=0
+FATFS0.BSP.instance=PA15
+FATFS0.BSP.ip=GPIO
+FATFS0.BSP.mode=Input
+FATFS0.BSP.name=Detect_SDIO
+FATFS0.BSP.solution=PA15
+FMC.AddressSetupTime1=0
+FMC.BusTurnAroundDuration1=0
+FMC.DataSetupTime1=1
+FMC.IPParameters=AddressSetupTime1,DataSetupTime1,BusTurnAroundDuration1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -479,19 +496,19 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SDIO_SD_Init-SDIO-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,11-MX_USART6_UART_Init-USART6-false-HAL-true,12-MX_SPI5_Init-SPI5-false-HAL-true,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,14-MX_FATFS_Init-FATFS-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
-RCC.AHBFreq_Value=168000000
+RCC.AHBFreq_Value=120000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
-RCC.APB1Freq_Value=42000000
-RCC.APB1TimFreq_Value=84000000
+RCC.APB1Freq_Value=30000000
+RCC.APB1TimFreq_Value=60000000
 RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB2Freq_Value=84000000
-RCC.APB2TimFreq_Value=168000000
-RCC.CortexFreq_Value=168000000
+RCC.APB2Freq_Value=60000000
+RCC.APB2TimFreq_Value=120000000
+RCC.CortexFreq_Value=120000000
 RCC.EnbaleCSS=true
-RCC.EthernetFreq_Value=168000000
-RCC.FCLKCortexFreq_Value=168000000
+RCC.EthernetFreq_Value=120000000
+RCC.FCLKCortexFreq_Value=120000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=168000000
+RCC.HCLKFreq_Value=120000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=100000000
@@ -499,27 +516,27 @@ RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Val
 RCC.LCDTFTFreq_Value=12250000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=42000000
+RCC.MCO1PinFreq_Value=24000000
 RCC.MCO2PinFreq_Value=25000000
-RCC.PLLCLKFreq_Value=168000000
+RCC.PLLCLKFreq_Value=120000000
 RCC.PLLI2SN=200
 RCC.PLLM=8
-RCC.PLLN=336
-RCC.PLLQ=7
+RCC.PLLN=240
+RCC.PLLQ=5
 RCC.PLLQCLKFreq_Value=48000000
 RCC.RCC_MCO1Source=RCC_MCO1SOURCE_PLLCLK
 RCC.RCC_MCO2Source=RCC_MCO2SOURCE_PLLI2SCLK
-RCC.RCC_MCODiv1=RCC_MCODIV_4
+RCC.RCC_MCODiv1=RCC_MCODIV_5
 RCC.RCC_MCODiv2=RCC_MCODIV_4
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI_AClocksFreq_Value=12250000
 RCC.SAI_BClocksFreq_Value=12250000
-RCC.SYSCLKFreq_VALUE=168000000
+RCC.SYSCLKFreq_VALUE=120000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=200000000
 RCC.VCOInputFreq_Value=1000000
-RCC.VCOOutputFreq_Value=336000000
+RCC.VCOOutputFreq_Value=240000000
 RCC.VCOSAIOutputFreq_Value=49000000
 RCC.VCOSAIOutputFreq_ValueQ=12250000
 RCC.VCOSAIOutputFreq_ValueR=24500000
@@ -755,19 +772,19 @@ SH.GPXTI3.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=42.0 MBits/s
+SPI1.CalculateBaudRate=30.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI2.CalculateBaudRate=21.0 MBits/s
+SPI2.CalculateBaudRate=15.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI5.CalculateBaudRate=42.0 MBits/s
+SPI5.CalculateBaudRate=30.0 MBits/s
 SPI5.Direction=SPI_DIRECTION_2LINES
 SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI5.Mode=SPI_MODE_MASTER
@@ -776,10 +793,15 @@ USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-USART6.IPParameters=VirtualMode
+USART6.BaudRate=115200
+USART6.IPParameters=VirtualMode,BaudRate
 USART6.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=MSC
-USB_DEVICE.IPParameters=VirtualMode-MSC_FS,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.CONFIGURATION_STRING_MSC_FS=NGV Config
+USB_DEVICE.INTERFACE_STRING_MSC_FS=NGV Interface
+USB_DEVICE.IPParameters=VirtualMode-MSC_FS,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING-MSC_FS,PRODUCT_STRING_MSC_FS,CONFIGURATION_STRING_MSC_FS,INTERFACE_STRING_MSC_FS
+USB_DEVICE.MANUFACTURER_STRING-MSC_FS=NSDN
+USB_DEVICE.PRODUCT_STRING_MSC_FS=NyaGame Vita v1.0
 USB_DEVICE.VirtualMode-MSC_FS=Msc
 USB_DEVICE.VirtualModeFS=Msc_FS
 USB_OTG_FS.IPParameters=VirtualMode
