--- a/cortex/firmware/ngv-main/ngv-main.ioc
+++ b/cortex/firmware/ngv-main/ngv-main.ioc
@@ -1,17 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-FATFS.BSP.number=1
-FATFS.IPParameters=USE_DMA_CODE_SD
-FATFS.USE_DMA_CODE_SD=0
-FATFS0.BSP.STBoard=false
-FATFS0.BSP.api=UnknownBspDriver
-FATFS0.BSP.component=
-FATFS0.BSP.i2caddr=0
-FATFS0.BSP.i2creg=0
-FATFS0.BSP.instance=PA15
-FATFS0.BSP.ip=GPIO
-FATFS0.BSP.mode=Input
-FATFS0.BSP.name=Detect_SDIO
-FATFS0.BSP.solution=PA15
 FMC.AddressSetupTime1=0
 FMC.BusTurnAroundDuration1=0
 FMC.DataSetupTime1=1
@@ -21,7 +8,7 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=FATFS
 Mcu.IP1=FMC
-Mcu.IP10=SYS
+Mcu.IP10=TIM10
 Mcu.IP11=USART1
 Mcu.IP12=USART2
 Mcu.IP13=USART6
@@ -32,9 +19,9 @@ Mcu.IP3=I2C2
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SDIO
-Mcu.IP7=SPI1
-Mcu.IP8=SPI2
-Mcu.IP9=SPI5
+Mcu.IP7=SPI2
+Mcu.IP8=SPI5
+Mcu.IP9=SYS
 Mcu.IPNb=16
 Mcu.Name=STM32F429Z(E-G)Tx
 Mcu.Package=LQFP144
@@ -57,8 +44,10 @@ Mcu.Pin111=PB9
 Mcu.Pin112=PE0
 Mcu.Pin113=PE1
 Mcu.Pin114=VP_FATFS_VS_SDIO
-Mcu.Pin115=VP_SYS_VS_Systick
-Mcu.Pin116=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
+Mcu.Pin115=VP_FATFS_VS_Generic
+Mcu.Pin116=VP_SYS_VS_Systick
+Mcu.Pin117=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin118=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
 Mcu.Pin12=PF4
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
@@ -155,7 +144,7 @@ Mcu.Pin96=PD6
 Mcu.Pin97=PD7
 Mcu.Pin98=PG9
 Mcu.Pin99=PG10
-Mcu.PinsNb=117
+Mcu.PinsNb=119
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZGTx
@@ -173,6 +162,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0/WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0/WKUP.GPIO_Label=KEYBRD_F2
@@ -204,20 +194,28 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
-PA4.GPIO_Label=SPI1_CS
+PA4.GPIOParameters=GPIO_Speed,GPIO_Label
+PA4.GPIO_Label=LCD_BLK
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Locked=true
-PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Speed
-PA8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA5.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA5.GPIO_Label=LCD_CS
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA5.Locked=true
+PA5.PinState=GPIO_PIN_SET
+PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Speed,GPIO_Label
+PA6.GPIO_Label=LCD_RS
+PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA7.GPIO_Label=LCD_RST
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA7.Locked=true
+PA7.PinState=GPIO_PIN_SET
+PA7.Signal=GPIO_Output
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
 PA9.Mode=Asynchronous
@@ -428,14 +426,14 @@ PG12.Mode=NorPsramChipSelect4_4
 PG12.Signal=FMC_NE4
 PG13.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PG13.GPIO_Label=KEYPAD_OUTA
-PG13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PG13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PG13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG13.Locked=true
 PG13.PinState=GPIO_PIN_SET
 PG13.Signal=GPIO_Output
 PG14.GPIOParameters=GPIO_Speed,PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 PG14.GPIO_Label=KEYPAD_OUTB
-PG14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PG14.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PG14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PG14.Locked=true
 PG14.PinState=GPIO_PIN_SET
@@ -494,7 +492,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SDIO_SD_Init-SDIO-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_USART2_UART_Init-USART2-false-HAL-true,11-MX_USART6_UART_Init-USART6-false-HAL-true,12-MX_SPI5_Init-SPI5-false-HAL-true,13-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,14-MX_FATFS_Init-FATFS-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART6_UART_Init-USART6-false-HAL-true,10-MX_SPI5_Init-SPI5-false-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,12-MX_FATFS_Init-FATFS-false-HAL-true,13-MX_SDIO_SD_Init-SDIO-false-HAL-true,14-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=120000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -504,7 +502,6 @@ RCC.APB2CLKDivider=RCC_HCLK_DIV2
 RCC.APB2Freq_Value=60000000
 RCC.APB2TimFreq_Value=120000000
 RCC.CortexFreq_Value=120000000
-RCC.EnbaleCSS=true
 RCC.EthernetFreq_Value=120000000
 RCC.FCLKCortexFreq_Value=120000000
 RCC.FamilyName=M
@@ -512,7 +509,7 @@ RCC.HCLKFreq_Value=120000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=100000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EnbaleCSS,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SN,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RCC_MCO1Source,RCC_MCO2Source,RCC_MCODiv1,RCC_MCODiv2,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SN,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RCC_MCO1Source,RCC_MCO2Source,RCC_MCODiv1,RCC_MCODiv2,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 RCC.LCDTFTFreq_Value=12250000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
@@ -771,12 +768,6 @@ SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=30.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI2.CalculateBaudRate=15.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
@@ -789,6 +780,9 @@ SPI5.Direction=SPI_DIRECTION_2LINES
 SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI5.Mode=SPI_MODE_MASTER
 SPI5.VirtualType=VM_MASTER
+TIM10.IPParameters=Prescaler,Period
+TIM10.Period=239
+TIM10.Prescaler=5
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
@@ -806,10 +800,14 @@ USB_DEVICE.VirtualMode-MSC_FS=Msc
 USB_DEVICE.VirtualModeFS=Msc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_FATFS_VS_Generic.Mode=User_defined
+VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_FATFS_VS_SDIO.Mode=SDIO
 VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM10_VS_ClockSourceINT.Signal=TIM10_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Mode=MSC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_MSC_FS
 board=ngv-main
