--- a/cortex/firmware/ngv-main/ngv-main.ioc
+++ b/cortex/firmware/ngv-main/ngv-main.ioc
@@ -1,4 +1,15 @@
 #MicroXplorer Configuration settings - do not modify
+FATFS.BSP.number=1
+FATFS0.BSP.STBoard=false
+FATFS0.BSP.api=UnknownBspDriver
+FATFS0.BSP.component=
+FATFS0.BSP.i2caddr=0
+FATFS0.BSP.i2creg=0
+FATFS0.BSP.instance=PA15
+FATFS0.BSP.ip=GPIO
+FATFS0.BSP.mode=Input
+FATFS0.BSP.name=Detect_SDIO
+FATFS0.BSP.solution=PA15
 FMC.AddressSetupTime1=0
 FMC.BusTurnAroundDuration1=0
 FMC.DataSetupTime1=1
@@ -492,7 +503,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART6_UART_Init-USART6-false-HAL-true,10-MX_SPI5_Init-SPI5-false-HAL-true,11-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,12-MX_FATFS_Init-FATFS-false-HAL-true,13-MX_SDIO_SD_Init-SDIO-false-HAL-true,14-MX_TIM10_Init-TIM10-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true,9-MX_SPI5_Init-SPI5-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,11-MX_FATFS_Init-FATFS-false-HAL-true,12-MX_TIM10_Init-TIM10-false-HAL-true,13-MX_SDIO_SD_Init-SDIO-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=120000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
