--- a/cortex/firmware/ngv-main/ngv-main.ioc
+++ b/cortex/firmware/ngv-main/ngv-main.ioc
@@ -1,15 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-FATFS.BSP.number=1
-FATFS0.BSP.STBoard=false
-FATFS0.BSP.api=UnknownBspDriver
-FATFS0.BSP.component=
-FATFS0.BSP.i2caddr=0
-FATFS0.BSP.i2creg=0
-FATFS0.BSP.instance=PA15
-FATFS0.BSP.ip=GPIO
-FATFS0.BSP.mode=Input
-FATFS0.BSP.name=Detect_SDIO
-FATFS0.BSP.solution=PA15
 FMC.AddressSetupTime1=0
 FMC.BusTurnAroundDuration1=0
 FMC.DataSetupTime1=1
@@ -19,21 +8,20 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=FATFS
 Mcu.IP1=FMC
-Mcu.IP10=TIM10
-Mcu.IP11=USART1
-Mcu.IP12=USART2
-Mcu.IP13=USART6
-Mcu.IP14=USB_DEVICE
-Mcu.IP15=USB_OTG_FS
+Mcu.IP10=USART1
+Mcu.IP11=USART2
+Mcu.IP12=USART6
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
 Mcu.IP2=I2C1
 Mcu.IP3=I2C2
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
-Mcu.IP6=SDIO
-Mcu.IP7=SPI2
-Mcu.IP8=SPI5
-Mcu.IP9=SYS
-Mcu.IPNb=16
+Mcu.IP6=SPI2
+Mcu.IP7=SPI5
+Mcu.IP8=SYS
+Mcu.IP9=TIM10
+Mcu.IPNb=15
 Mcu.Name=STM32F429Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -54,11 +42,10 @@ Mcu.Pin110=PB8
 Mcu.Pin111=PB9
 Mcu.Pin112=PE0
 Mcu.Pin113=PE1
-Mcu.Pin114=VP_FATFS_VS_SDIO
-Mcu.Pin115=VP_FATFS_VS_Generic
-Mcu.Pin116=VP_SYS_VS_Systick
-Mcu.Pin117=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin118=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
+Mcu.Pin114=VP_FATFS_VS_Generic
+Mcu.Pin115=VP_SYS_VS_Systick
+Mcu.Pin116=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin117=VP_USB_DEVICE_VS_USB_DEVICE_MSC_FS
 Mcu.Pin12=PF4
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
@@ -155,7 +142,7 @@ Mcu.Pin96=PD6
 Mcu.Pin97=PD7
 Mcu.Pin98=PG9
 Mcu.Pin99=PG10
-Mcu.PinsNb=119
+Mcu.PinsNb=118
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZGTx
@@ -305,11 +292,11 @@ PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC1.Locked=true
 PC1.PinState=GPIO_PIN_SET
 PC1.Signal=GPIO_Output
-PC10.Mode=SD_4_bits_Wide_bus
+PC10.Locked=true
 PC10.Signal=SDIO_D2
-PC11.Mode=SD_4_bits_Wide_bus
+PC11.Locked=true
 PC11.Signal=SDIO_D3
-PC12.Mode=SD_4_bits_Wide_bus
+PC12.Locked=true
 PC12.Signal=SDIO_CK
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=LED_R
@@ -343,10 +330,11 @@ PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
-PC8.Mode=SD_4_bits_Wide_bus
+PC8.Locked=true
 PC8.Signal=SDIO_D0
-PC9.Mode=SD_4_bits_Wide_bus
-PC9.Signal=SDIO_D1
+PC9.Locked=true
+PC9.Mode=Clock-out-2
+PC9.Signal=RCC_MCO_2
 PCC.Checker=false
 PCC.Line=STM32F429/439
 PCC.MCU=STM32F429Z(E-G)Tx
@@ -363,7 +351,7 @@ PD12.Signal=FMC_A17_ALE
 PD13.Signal=FMC_A18
 PD14.Signal=FMC_D0_DA0
 PD15.Signal=FMC_D1_DA1
-PD2.Mode=SD_4_bits_Wide_bus
+PD2.Locked=true
 PD2.Signal=SDIO_CMD
 PD3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD3.GPIO_Label=FPGA_INT
@@ -503,7 +491,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true,9-MX_SPI5_Init-SPI5-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,11-MX_FATFS_Init-FATFS-false-HAL-true,12-MX_TIM10_Init-TIM10-false-HAL-true,13-MX_SDIO_SD_Init-SDIO-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true,9-MX_SPI5_Init-SPI5-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,11-MX_FATFS_Init-FATFS-false-HAL-true,12-MX_TIM10_Init-TIM10-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=120000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -519,15 +507,15 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=120000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2SClocksFreq_Value=100000000
+RCC.I2SClocksFreq_Value=60000000
 RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LCDTFTFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SN,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RCC_MCO1Source,RCC_MCO2Source,RCC_MCODiv1,RCC_MCODiv2,RTCFreq_Value,RTCHSEDivFreq_Value,SAI_AClocksFreq_Value,SAI_BClocksFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value,VCOSAIOutputFreq_ValueQ,VCOSAIOutputFreq_ValueR,VcooutputI2S,VcooutputI2SQ
 RCC.LCDTFTFreq_Value=12250000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO1PinFreq_Value=24000000
-RCC.MCO2PinFreq_Value=25000000
+RCC.MCO2PinFreq_Value=12000000
 RCC.PLLCLKFreq_Value=120000000
-RCC.PLLI2SN=200
+RCC.PLLI2SN=120
 RCC.PLLM=8
 RCC.PLLN=240
 RCC.PLLQ=5
@@ -535,21 +523,21 @@ RCC.PLLQCLKFreq_Value=48000000
 RCC.RCC_MCO1Source=RCC_MCO1SOURCE_PLLCLK
 RCC.RCC_MCO2Source=RCC_MCO2SOURCE_PLLI2SCLK
 RCC.RCC_MCODiv1=RCC_MCODIV_5
-RCC.RCC_MCODiv2=RCC_MCODIV_4
+RCC.RCC_MCODiv2=RCC_MCODIV_5
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI_AClocksFreq_Value=12250000
 RCC.SAI_BClocksFreq_Value=12250000
 RCC.SYSCLKFreq_VALUE=120000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.VCOI2SOutputFreq_Value=200000000
+RCC.VCOI2SOutputFreq_Value=120000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=240000000
 RCC.VCOSAIOutputFreq_Value=49000000
 RCC.VCOSAIOutputFreq_ValueQ=12250000
 RCC.VCOSAIOutputFreq_ValueR=24500000
-RCC.VcooutputI2S=100000000
-RCC.VcooutputI2SQ=100000000
+RCC.VcooutputI2S=60000000
+RCC.VcooutputI2SQ=60000000
 SH.FMC_A0.0=FMC_A0,13b-sda1
 SH.FMC_A0.1=FMC_A0,24b-a1
 SH.FMC_A0.2=FMC_A0,24b-a2
@@ -785,8 +773,8 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI5.CalculateBaudRate=30.0 MBits/s
+SPI5.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI5.CalculateBaudRate=7.5 MBits/s
 SPI5.Direction=SPI_DIRECTION_2LINES
 SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI5.Mode=SPI_MODE_MASTER
@@ -813,8 +801,6 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
-VP_FATFS_VS_SDIO.Mode=SDIO
-VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM10_VS_ClockSourceINT.Mode=Enable_Timer
