--- a/cortex/firmware/ngv-main/ngv-main.ioc
+++ b/cortex/firmware/ngv-main/ngv-main.ioc
@@ -8,11 +8,10 @@ KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=FATFS
 Mcu.IP1=FMC
-Mcu.IP10=USART1
-Mcu.IP11=USART2
-Mcu.IP12=USART6
-Mcu.IP13=USB_DEVICE
-Mcu.IP14=USB_OTG_FS
+Mcu.IP10=USART2
+Mcu.IP11=USART6
+Mcu.IP12=USB_DEVICE
+Mcu.IP13=USB_OTG_FS
 Mcu.IP2=I2C1
 Mcu.IP3=I2C2
 Mcu.IP4=NVIC
@@ -21,7 +20,7 @@ Mcu.IP6=SPI2
 Mcu.IP7=SPI5
 Mcu.IP8=SYS
 Mcu.IP9=TIM10
-Mcu.IPNb=15
+Mcu.IPNb=14
 Mcu.Name=STM32F429Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -173,8 +172,11 @@ PA1.GPIO_Mode=GPIO_MODE_INPUT
 PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPIO_Input
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
+PA10.GPIOParameters=GPIO_Speed,GPIO_Label
+PA10.GPIO_Label=BEEP_L
+PA10.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA10.Locked=true
+PA10.Signal=GPIO_Output
 PA11.Mode=Device_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.Mode=Device_Only
@@ -216,8 +218,11 @@ PA7.PinState=GPIO_PIN_SET
 PA7.Signal=GPIO_Output
 PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
-PA9.Mode=Asynchronous
-PA9.Signal=USART1_TX
+PA9.GPIOParameters=GPIO_Speed,GPIO_Label
+PA9.GPIO_Label=BEEP_R
+PA9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB0.GPIO_Label=KEYBRD_F6
 PB0.GPIO_Mode=GPIO_MODE_INPUT
@@ -491,7 +496,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true,9-MX_SPI5_Init-SPI5-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,11-MX_FATFS_Init-FATFS-false-HAL-true,12-MX_TIM10_Init-TIM10-false-HAL-true,13-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_FMC_Init-FMC-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USART6_UART_Init-USART6-false-HAL-true,9-MX_SPI5_Init-SPI5-false-HAL-true,10-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,11-MX_FATFS_Init-FATFS-false-HAL-true,12-MX_TIM10_Init-TIM10-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=120000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -782,8 +787,6 @@ SPI5.VirtualType=VM_MASTER
 TIM10.IPParameters=Prescaler,Period
 TIM10.Period=239
 TIM10.Prescaler=5
-USART1.IPParameters=VirtualMode
-USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 USART6.BaudRate=115200
