--- a/cortex/firmware/ngv-main/ngv-main.ioc
+++ b/cortex/firmware/ngv-main/ngv-main.ioc
@@ -1,8 +1,37 @@
 #MicroXplorer Configuration settings - do not modify
+FATFS.IPParameters=_MAX_SS,_MIN_SS,_USE_LFN,_CODE_PAGE
+FATFS._CODE_PAGE=850
+FATFS._MAX_SS=4096
+FATFS._MIN_SS=4096
+FATFS._USE_LFN=1
 FMC.AddressSetupTime1=0
+FMC.AddressSetupTime2=0
+FMC.AddressSetupTime3=0
+FMC.AddressSetupTime4=0
 FMC.BusTurnAroundDuration1=0
+FMC.BusTurnAroundDuration2=0
+FMC.BusTurnAroundDuration3=0
+FMC.BusTurnAroundDuration4=0
+FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_2
+FMC.ColumnBitsNumber1=FMC_SDRAM_COLUMN_BITS_NUM_9
 FMC.DataSetupTime1=1
-FMC.IPParameters=AddressSetupTime1,DataSetupTime1,BusTurnAroundDuration1
+FMC.DataSetupTime2=1
+FMC.DataSetupTime3=1
+FMC.DataSetupTime4=1
+FMC.ExitSelfRefreshDelay1=7
+FMC.IPParameters=AddressSetupTime1,DataSetupTime1,BusTurnAroundDuration1,ColumnBitsNumber1,CASLatency1,ReadPipeDelay1,ReadPipeDelay2,SDClockPeriod1,SDClockPeriod2,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,RowCycleDelay2,WriteRecoveryTime1,RPDelay1,RPDelay2,RCDDelay1,AddressSetupTime2,DataSetupTime2,BusTurnAroundDuration2,AddressSetupTime3,DataSetupTime3,BusTurnAroundDuration3,AddressSetupTime4,DataSetupTime4,BusTurnAroundDuration4
+FMC.LoadToActiveDelay1=2
+FMC.RCDDelay1=2
+FMC.RPDelay1=2
+FMC.RPDelay2=2
+FMC.ReadPipeDelay1=FMC_SDRAM_RPIPE_DELAY_1
+FMC.ReadPipeDelay2=FMC_SDRAM_RPIPE_DELAY_1
+FMC.RowCycleDelay1=7
+FMC.RowCycleDelay2=7
+FMC.SDClockPeriod1=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
+FMC.SelfRefreshTime1=4
+FMC.WriteRecoveryTime1=3
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -483,7 +512,7 @@ ProjectManager.DeviceId=STM32F429ZGTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.21.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x1000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -492,7 +521,7 @@ ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=ngv-main.ioc
 ProjectManager.ProjectName=ngv-main
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
@@ -795,8 +824,9 @@ USART6.VirtualMode=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=MSC
 USB_DEVICE.CONFIGURATION_STRING_MSC_FS=NGV Config
 USB_DEVICE.INTERFACE_STRING_MSC_FS=NGV Interface
-USB_DEVICE.IPParameters=VirtualMode-MSC_FS,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING-MSC_FS,PRODUCT_STRING_MSC_FS,CONFIGURATION_STRING_MSC_FS,INTERFACE_STRING_MSC_FS
+USB_DEVICE.IPParameters=VirtualMode-MSC_FS,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING-MSC_FS,PRODUCT_STRING_MSC_FS,CONFIGURATION_STRING_MSC_FS,INTERFACE_STRING_MSC_FS,MSC_MEDIA_PACKET-MSC_FS
 USB_DEVICE.MANUFACTURER_STRING-MSC_FS=NSDN
+USB_DEVICE.MSC_MEDIA_PACKET-MSC_FS=8192
 USB_DEVICE.PRODUCT_STRING_MSC_FS=NyaGame Vita v1.0
 USB_DEVICE.VirtualMode-MSC_FS=Msc
 USB_DEVICE.VirtualModeFS=Msc_FS
